// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input component  should match the snapshot 1`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #f2f2f2;
  border: 2px solid #999999;
  color: #4c4c4c;
  margin-top: 8px;
  padding: 8px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #999999;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c2[disabled] {
  background-color: #cccccc;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

.c3 {
  color: #4c4c4c;
  font-size: 1.5em;
  pointer-events: none;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-0-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-0-label"
      autoComplete="off"
      id="downshift-0-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c2"
      data-toggle={true}
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Select an option
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "",
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 2`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #f2f2f2;
  border: 2px solid #999999;
  color: #4c4c4c;
  margin-top: 8px;
  padding: 8px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #999999;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c2[disabled] {
  background-color: #cccccc;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

.c3 {
  color: #4c4c4c;
  font-size: 1.5em;
  pointer-events: none;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-1-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-1-label"
      autoComplete="off"
      id="downshift-1-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c2"
      data-toggle={true}
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Dropdown placeholder
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "",
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 3`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #f2f2f2;
  border: 2px solid #999999;
  color: #4c4c4c;
  margin-top: 8px;
  padding: 8px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  color: #999999;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c2[disabled] {
  background-color: #cccccc;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

.c3 {
  color: #4c4c4c;
  font-size: 1.5em;
  pointer-events: none;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-2-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-2-label"
      autoComplete="off"
      id="downshift-2-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c2"
      data-toggle={true}
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "",
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 4`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c4 {
  color: #ac001a;
  font-size: 14px;
  cursor: text;
  font-style: italic;
  font-weight: 600;
  display: block;
  margin: 8px 12px 0;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #f2f2f2;
  border: 2px solid #999999;
  color: #4c4c4c;
  margin-top: 8px;
  padding: 8px 12px;
  border-color: #ff2d4d;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #999999;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #ff2d4d;
  box-shadow: 0px 3px 5px -1px rgba(255,45,77,0.2),0px 5px 8px 0px rgba(255,45,77,0.14),0px 1px 14px 0px rgba(255,45,77,0.12);
}

.c2[disabled] {
  background-color: #cccccc;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

.c3 {
  color: #4c4c4c;
  font-size: 1.5em;
  pointer-events: none;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-3-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-3-label"
      autoComplete="off"
      id="downshift-3-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c2"
      data-toggle={true}
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Select an option
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "",
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  <span
    className="c4"
  >
    Error message
  </span>
</div>
`;

exports[`Input component  should match the snapshot 5`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #f2f2f2;
  border: 2px solid #999999;
  color: #4c4c4c;
  margin-top: 8px;
  padding: 8px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #999999;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c2[disabled] {
  background-color: #cccccc;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

.c3 {
  color: #4c4c4c;
  font-size: 1.5em;
  pointer-events: none;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-4-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-4-label"
      autoComplete="off"
      id="downshift-4-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c2"
      data-toggle={true}
      disabled={true}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Select an option
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "",
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 6`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  display: block;
  font-weight: bold;
  margin: 8px 12px 0;
}

.c3 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #f2f2f2;
  border: 2px solid #999999;
  color: #4c4c4c;
  margin-top: 8px;
  padding: 8px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #999999;
}

.c3::-webkit-inner-spin-button,
.c3::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c3::-webkit-calendar-picker-indicator,
.c3::-webkit-search-cancel-button {
  display: none;
}

.c3:hover,
.c3:focus {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c3[disabled] {
  background-color: #cccccc;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c3:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

.c4 {
  color: #4c4c4c;
  font-size: 1.5em;
  pointer-events: none;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-5-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    <label
      className="c2"
      disabled={false}
      htmlFor="downshift-5-input"
      id="downshift-5-label"
      onClick={[Function]}
    >
      Dropdown label
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-5-label"
      autoComplete="off"
      id="downshift-5-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c3"
      data-toggle={true}
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Select an option
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c4"
        style={
          Object {
            "color": "",
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 7`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  display: block;
  font-weight: bold;
  margin: 8px 12px 0;
}

.c3 {
  color: #ff2d4d;
}

.c4 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #f2f2f2;
  border: 2px solid #999999;
  color: #4c4c4c;
  margin-top: 8px;
  padding: 8px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #999999;
}

.c4::-webkit-inner-spin-button,
.c4::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c4::-webkit-calendar-picker-indicator,
.c4::-webkit-search-cancel-button {
  display: none;
}

.c4:hover,
.c4:focus {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c4[disabled] {
  background-color: #cccccc;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c4:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

.c5 {
  color: #4c4c4c;
  font-size: 1.5em;
  pointer-events: none;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-6-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    <label
      className="c2"
      disabled={false}
      htmlFor="downshift-6-input"
      id="downshift-6-label"
      onClick={[Function]}
    >
      Dropdown label
      <em
        className="c3"
      >
        *
      </em>
    </label>
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-6-label"
      autoComplete="off"
      id="downshift-6-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c4"
      data-toggle={true}
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Select an option
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c5"
        style={
          Object {
            "color": "",
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 8`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #f2f2f2;
  border: 2px solid #999999;
  color: #4c4c4c;
  margin-top: 8px;
  padding: 8px 12px;
  color: #999999;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #999999;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c2[disabled] {
  background-color: #cccccc;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

.c3 {
  color: #4c4c4c;
  font-size: 1.5em;
  pointer-events: none;
  position: absolute;
  top: 12px;
  right: 14px;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-7-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-7-label"
      autoComplete="off"
      id="downshift-7-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <div
      className="c1"
    >
      <input
        aria-activedescendant={null}
        aria-autocomplete="list"
        aria-controls={null}
        aria-labelledby="downshift-7-label"
        autoComplete="off"
        className="c2"
        disabled={false}
        id="downshift-7-input"
        onBlur={[Function]}
        onChange={[Function]}
        onClick={[Function]}
        onKeyDown={[Function]}
        placeholder="Select an option"
        style={
          Object {
            "cursor": "inherit",
          }
        }
        value=""
      />
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "",
          }
        }
      >
        keyboard_arrow_down
      </span>
    </div>
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 9`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #f2f2f2;
  border: 2px solid #999999;
  color: #4c4c4c;
  margin-top: 8px;
  padding: 8px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  color: #999999;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c2[disabled] {
  background-color: #cccccc;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

.c3 {
  color: #4c4c4c;
  font-size: 1.5em;
  pointer-events: none;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-8-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-8-label"
      autoComplete="off"
      id="downshift-8-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value=""
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c2"
      data-toggle={true}
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      Select an option
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "",
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  
</div>
`;

exports[`Input component  should match the snapshot 10`] = `
.c0 {
  position: relative;
  margin-bottom: 20px;
  min-width: 250px;
  width: 100%;
}

.c2 {
  border-radius: 4px;
  box-sizing: border-box;
  box-sizing: border-box;
  font-size: initial;
  -webkit-letter-spacing: 0.2px;
  -moz-letter-spacing: 0.2px;
  -ms-letter-spacing: 0.2px;
  letter-spacing: 0.2px;
  outline: none;
  -webkit-transition: all 0.2s ease-in-out;
  transition: all 0.2s ease-in-out;
  width: 100%;
  background-color: #f2f2f2;
  border: 2px solid #999999;
  color: #4c4c4c;
  margin-top: 8px;
  padding: 8px 12px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c2::-webkit-inner-spin-button,
.c2::-webkit-outer-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.c2::-webkit-calendar-picker-indicator,
.c2::-webkit-search-cancel-button {
  display: none;
}

.c2:hover,
.c2:focus {
  border-color: #1355d0;
  box-shadow: 0px 3px 5px -1px rgba(19,85,208,0.2),0px 5px 8px 0px rgba(19,85,208,0.14),0px 1px 14px 0px rgba(19,85,208,0.12);
}

.c2[disabled] {
  background-color: #cccccc;
  border-color: #999999;
  box-shadow: none;
  color: #999999;
  cursor: not-allowed;
}

.c2:-webkit-autofill {
  box-shadow: 0 0 0 1000px #ffe5e9 inset;
}

.c3 {
  color: #4c4c4c;
  font-size: 1.5em;
  pointer-events: none;
}

.c1 {
  position: relative;
}

<div
  className="c0"
>
  <div
    aria-expanded={false}
    aria-haspopup="listbox"
    aria-labelledby="downshift-9-label"
    aria-owns={null}
    className="c1"
    role="combobox"
  >
    
    <input
      aria-activedescendant={null}
      aria-autocomplete="list"
      aria-controls={null}
      aria-labelledby="downshift-9-label"
      autoComplete="off"
      id="downshift-9-input"
      onBlur={[Function]}
      onChange={[Function]}
      onKeyDown={[Function]}
      type="hidden"
      value="bazKey"
    />
    <button
      aria-haspopup={true}
      aria-label="open menu"
      className="c2"
      data-toggle={true}
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      role="button"
      type="button"
    >
      baz
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-1 c3"
        style={
          Object {
            "color": "",
          }
        }
      >
        keyboard_arrow_down
      </span>
    </button>
  </div>
  
</div>
`;
